@startuml 07-database-model
!theme plain
title 数据库集合关系图

skinparam backgroundColor #FFFFFF
'skinparam linetype ortho

package "云数据库" {
  
  entity "users" as users {
    + openid: string(PK)
    --
    nickName: string
    avatarUrl: string
    phone: string
    campusInfo: { campus, building, room }
    blindBoxCoins: number
    vipStatus: boolean
    createTime: datetime
  }
  
  entity "boxes" as boxes {
    + _id: string(PK)
    --
    sellerOpenid: string(FK→users)
    title: string
    type: enum(snack, daily, gift, other)
    mode: enum(direct, auction, blind)
    price: number
    originalPrice: number
    images: array[string]
    description: string
    category: string
    status: enum(available, sold, donated_pending)
    location: { lat, lng, building }
    createTime: datetime
  }
  
  entity "orders" as orders {
    + _id: string(PK)
    --
    boxId: string(FK→boxes)
    buyerOpenid: string(FK→users)
    sellerOpenid: string(FK→users)
    status: enum(pending, grabbed, delivering, completed, cancelled)
    price: number
    deliveryAddress: string
    deliveryLocation: { lat, lng }
    createTime: datetime
    updateTime: datetime
  }
  
  entity "deliveries" as deliveries {
    + _id: string(PK)
    --
    orderId: string(FK→orders)
    riderOpenid: string(FK→riders)
    status: enum(pending, picking, delivering, completed)
    pickupTime: datetime
    deliveryTime: datetime
    routeInfo: { path, distance, duration }
    createTime: datetime
  }
  
  entity "riders" as riders {
    + openid: string(PK)
    --
    nickName: string
    avatarUrl: string
    phone: string
    location: { lat, lng, building }
    status: enum(available, busy, offline)
    currentOrders: array[string]
    rating: number
    createTime: datetime
  }
  
  entity "coinLogs" as coinLogs {
    + _id: string(PK)
    --
    openid: string(FK→users)
    type: enum(sign, share, invite, trade, donate, shake)
    amount: number
    balance: number
    description: string
    createTime: datetime
  }
}

users "1" -- "0..n" boxes : 发布
users "1" -- "0..n" orders : 购买
users "1" -- "0..n" coinLogs : 积分
orders "1" -- "1" boxes : 包含
orders "1" -- "0..1" deliveries : 配送
orders "1" -- "0..1" riders : 配送
users "1" -- "0..n" riders : 可成为骑手

@enduml
